migrated main domain objects, created main crud with them
