# docs/swagger.yaml
@@ -18,6 +18,27 @@ definitions:
     - id
     - name
     type: object
+  v1.createPropositionInput:
+    properties:
+      description:
+        type: string
+      explanation:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      targetID:
+        type: string
+      text:
+        type: string
+    required:
+    - description
+    - explanation
+    - id
+    - name
+    - text
+    type: object
   v1.grantRoleInput:
     properties:
       role:
@@ -133,6 +154,46 @@ paths:
       summary: admin CreateTreatise
       tags:
       - content
+  /admins/content/:id/proposition/:
+    post:
+      consumes:
+      - application/json
+      description: createProposition
+      parameters:
+      - description: proposition info
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/v1.createPropositionInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.tokenResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "404":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.response'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/v1.response'
+      security:
+      - createProposition: []
+      summary: admin createProposition
+      tags:
+      - propositions
   /admins/content/{id}:
     delete:
       consumes:
